--- a/JavaScript_Intro.html
+++ b/JavaScript_Intro.html
@@ -5,11 +5,17 @@
     </head>
 
     <body>
-        <script type="text/javascript"> /*<!-- indicates the type of script is javascript -->*/
-        /*<!-- These are comments. Put script between these for older browswers to ignore //-->*/
+        <script type="text/javascript">
 
-        //Statements (Instructions). End with a Semicolon
-         document.write("hey now brown cow");
+        /*Variables (Place holder)
+        1. Syntax: keyword (var) variable_name (x) = whatever you want your variable to be
+        2. variables are case sensitive
+        3. start with and underscore or letter
+        4. other characters need to be letters, underscores and numbers
+        5. CAN'T start with numbers
+        */
+        var x = 23;
+        document.write(x);
 
         </script>
 
