Numbers and Text Variable Types; Escape character (\)

--- a/JavaScript_Intro.html
+++ b/JavaScript_Intro.html
@@ -14,8 +14,13 @@
         4. other characters need to be letters, underscores and numbers
         5. CAN'T start with numbers
         */
-        var x = 23;
-        document.write(x);
+        var tuna = 20.657738 ;
+        //for text - put in quotation marks
+        var tuna2 = " text in here, \"YO!\"";
+            //escape character (\): for quotations within quotations. Plave before (")
+
+        document.write(tuna);
+        document.write(tuna2);
 
         </script>
 
