Using Parameters with Functions

--- a/JavaScript_Intro.html
+++ b/JavaScript_Intro.html
@@ -6,21 +6,14 @@
 
     <body>
         <script type="text/javascript">
-            /*functions
-            Syntax : keyword (function) function_name (funky) Parentesis () {code goes here}
-            */
-            function funky () {
-            //what you want to do
-                //making pop ups
-                alert("OUCH!!!!!");
+            function meatball (x) {
+            alert (" I love " + x);
             }
-            //to use (call) the function automatically
-            //funky ();
-        </script>
 
-        <!--to use (call) the function inside a form on a button-->
-        <form>
-        <input type="button" value="touch me!" onclick="funky()">
-        </form>
+            meatball ("bacon");
+            meatball ("Liverpool");
+            meatball ("To sleep"); //produces three popups (alerts) one after another
+
+        </script>
     </body>
 </html>
