Functions with multiple parameters

--- a/JavaScript_Intro.html
+++ b/JavaScript_Intro.html
@@ -6,13 +6,11 @@
 
     <body>
         <script type="text/javascript">
-            function meatball (x) {
-            alert (" I love " + x);
+            function apples (one, two) { //write as many variables (parameters) as needed - we'll use two
+            document.write (one + " is better than " + two + "<br />"); //<br /> moves to the next line
             }
 
-            meatball ("bacon");
-            meatball ("Liverpool");
-            meatball ("To sleep"); //produces three popups (alerts) one after another
+            apples ("Irene", "Sue"); /*"Irene is better than Sue" is printed*/
 
         </script>
     </body>
