--- a/JavaScript_Intro.html
+++ b/JavaScript_Intro.html
@@ -7,16 +7,17 @@
     <body>
         <script type="text/javascript">
 
-            // Assignment Opertors
+            // If Statements
+            var apples = 53;
+            var hotdogs = 50;
 
-            var bucky = 24;
-            bucky += 20; // = 44; adds 20 to 24
-           /* bucky -= 20; // = 4; subtracts 20 from 24
-            bucky *= 20; // = 480; multiplies 24 by 20
-            bucky /= 20; // = 1.2; divides 24 by 20
-            bucky %= 20; // = 4; gives remainder after 24 is divided by 20  */
-            document.write(bucky + "<br />");
+            /*syntx
+            if (comparison) {
+            if true - compute code within curly brackets} */
 
+            if (apples == hotdogs) { //can use <, >,  >=, <=
+            document.write ("YaY!");
+            } //nothing happens if it's false
 
         </script>
     </body>
